--- a/# 6-22 intent_clsf.ipynb
+++ b/# 6-22 intent_clsf.ipynb
@@ -11,29 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\khj_a\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\torch\\package\\_directory_reader.py:17: UserWarning: Failed to initialize NumPy: numpy.core.multiarray failed to import (Triggered internally at  ..\\torch\\csrc\\utils\\tensor_numpy.cpp:68.)\n",
-      "  _dtype_to_storage = {data_type(0).dtype: data_type for data_type in _storages}\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tqdm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16260/2044474051.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrange\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tqdm'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -60,67 +40,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\runpy.py\", line 194, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\runpy.py\", line 87, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"C:\\Users\\khj_a\\AppData\\Local\\Programs\\Python\\Python38\\Scripts\\pip.exe\\__main__.py\", line 7, in <module>\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_internal\\cli\\main.py\", line 73, in main\n",
-      "    command = create_command(cmd_name, isolated=(\"--isolated\" in cmd_args))\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_internal\\commands\\__init__.py\", line 104, in create_command\n",
-      "    module = importlib.import_module(module_path)\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\importlib\\__init__.py\", line 127, in import_module\n",
-      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1014, in _gcd_import\n",
-      "  File \"<frozen importlib._bootstrap>\", line 991, in _find_and_load\n",
-      "  File \"<frozen importlib._bootstrap>\", line 975, in _find_and_load_unlocked\n",
-      "  File \"<frozen importlib._bootstrap>\", line 671, in _load_unlocked\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 783, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_internal\\commands\\install.py\", line 17, in <module>\n",
-      "    from pip._internal.cli.req_command import RequirementCommand, with_cleanup\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_internal\\cli\\req_command.py\", line 16, in <module>\n",
-      "    from pip._internal.index.collector import LinkCollector\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_internal\\index\\collector.py\", line 14, in <module>\n",
-      "    from pip._vendor import html5lib, requests\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_vendor\\requests\\__init__.py\", line 43, in <module>\n",
-      "    from pip._vendor import urllib3\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_vendor\\urllib3\\__init__.py\", line 7, in <module>\n",
-      "    from .connectionpool import HTTPConnectionPool, HTTPSConnectionPool, connection_from_url\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_vendor\\urllib3\\connectionpool.py\", line 39, in <module>\n",
-      "    from .response import HTTPResponse\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 156, in <module>\n",
-      "    class HTTPResponse(io.IOBase):\n",
-      "  File \"c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 389, in HTTPResponse\n",
-      "    DECODER_ERROR_CLASSES += (brotli.error,)\n",
-      "AttributeError: module 'brotli' has no attribute 'error'\n"
+      "Requirement already satisfied: sentencepiece in c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (0.1.96)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install sentencepiece"
+    "pip install sentencepiece"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pytorch-crf in c:\\users\\khj_a\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (0.7.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install pytorch-crf"
+    "pip install pytorch-crf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,25 +175,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>야 먼지 알려주겠니</td>\n",
+       "      <td>dust</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>아니 먼지 정보 알려주세요</td>\n",
+       "      <td>dust</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>그 때 미세먼지 어떨까</td>\n",
+       "      <td>dust</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>그 때 먼지 좋으려나</td>\n",
+       "      <td>dust</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>미세먼지 어떨 것 같은데</td>\n",
+       "      <td>dust</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         question label\n",
+       "0      야 먼지 알려주겠니  dust\n",
+       "1  아니 먼지 정보 알려주세요  dust\n",
+       "2    그 때 미세먼지 어떨까  dust\n",
+       "3     그 때 먼지 좋으려나  dust\n",
+       "4   미세먼지 어떨 것 같은데  dust"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "intent_dataset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>label</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>dust</th>\n",
+       "      <td>4997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>restaurant</th>\n",
+       "      <td>4997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>travel</th>\n",
+       "      <td>4999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weather</th>\n",
+       "      <td>4999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            question\n",
+       "label               \n",
+       "dust            4997\n",
+       "restaurant      4997\n",
+       "travel          4999\n",
+       "weather         4999"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "intent_dataset.groupby(['label']).count() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +343,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 36, 951, 177,  ...,   0,   0,   0],\n",
+       "         [190, 231,   6,  ...,   0,   0,   0],\n",
+       "         [179,   9, 155,  ...,   0,   0,   0],\n",
+       "         ...,\n",
+       "         [389,   2,   0,  ...,   0,   0,   0],\n",
+       "         [ 95,   9, 173,  ...,   0,   0,   0],\n",
+       "         [302, 255,  14,  ...,   0,   0,   0]]),\n",
+       " tensor([3, 1, 1,  ..., 0, 2, 1]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "intent_train_dataset.tensors"
    ]
@@ -272,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,9 +442,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "textCNN(\n",
+       "  (embed): Embedding(1481, 300)\n",
+       "  (convs): ModuleList(\n",
+       "    (0): Conv2d(1, 256, kernel_size=(3, 300), stride=(1, 1))\n",
+       "    (1): Conv2d(1, 256, kernel_size=(4, 300), stride=(1, 1))\n",
+       "    (2): Conv2d(1, 256, kernel_size=(5, 300), stride=(1, 1))\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0.5, inplace=False)\n",
+       "  (fc): Linear(in_features=768, out_features=4, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
@@ -352,9 +478,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: 100%|██████████| 125/125 [01:06<00:00,  1.87batch/s, accuracy=98.34711, loss=0.401]  \n",
+      "Epoch 0: 100%|██████████| 32/32 [00:03<00:00,  8.76batch/s, accuracy=98.6, loss=0.819]   \n",
+      "Epoch 1: 100%|██████████| 125/125 [01:38<00:00,  1.28batch/s, accuracy=100.0, loss=1.46e-6]  \n",
+      "Epoch 1: 100%|██████████| 32/32 [00:04<00:00,  7.82batch/s, accuracy=98.9, loss=2.08]    \n",
+      "Epoch 2: 100%|██████████| 125/125 [01:32<00:00,  1.35batch/s, accuracy=100.0, loss=0.0069]    \n",
+      "Epoch 2: 100%|██████████| 32/32 [00:05<00:00,  5.67batch/s, accuracy=99.1, loss=9.93e-8]\n",
+      "Epoch 3: 100%|██████████| 125/125 [01:48<00:00,  1.15batch/s, accuracy=100.0, loss=0]        \n",
+      "Epoch 3: 100%|██████████| 32/32 [00:06<00:00,  4.64batch/s, accuracy=99.1, loss=1.19e-8] \n",
+      "Epoch 4: 100%|██████████| 125/125 [01:22<00:00,  1.52batch/s, accuracy=100.0, loss=6.7e-8]   \n",
+      "Epoch 4: 100%|██████████| 32/32 [00:05<00:00,  5.42batch/s, accuracy=99.1, loss=0]      \n",
+      "Epoch 5: 100%|██████████| 125/125 [00:51<00:00,  2.42batch/s, accuracy=100.0, loss=0]        \n",
+      "Epoch 5: 100%|██████████| 32/32 [00:05<00:00,  6.28batch/s, accuracy=99.1, loss=0]     \n",
+      "Epoch 6: 100%|██████████| 125/125 [01:49<00:00,  1.14batch/s, accuracy=98.34711, loss=0.506] \n",
+      "Epoch 6: 100%|██████████| 32/32 [00:09<00:00,  3.39batch/s, accuracy=99.2, loss=0]      \n",
+      "Epoch 7: 100%|██████████| 125/125 [02:03<00:00,  1.01batch/s, accuracy=99.17355, loss=0.0128]\n",
+      "Epoch 7: 100%|██████████| 32/32 [00:04<00:00,  7.40batch/s, accuracy=99.1, loss=0]      \n",
+      "Epoch 8: 100%|██████████| 125/125 [00:48<00:00,  2.60batch/s, accuracy=99.17355, loss=0.529] \n",
+      "Epoch 8: 100%|██████████| 32/32 [00:04<00:00,  7.87batch/s, accuracy=99.3, loss=3.11]   \n",
+      "Epoch 9: 100%|██████████| 125/125 [01:22<00:00,  1.51batch/s, accuracy=100.0, loss=0]        \n",
+      "Epoch 9: 100%|██████████| 32/32 [00:08<00:00,  3.86batch/s, accuracy=99.2, loss=0]      \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 15min 22s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "epoch = 10\n",
@@ -414,20 +574,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "textCNN(\n",
+       "  (embed): Embedding(1481, 300)\n",
+       "  (convs): ModuleList(\n",
+       "    (0): Conv2d(1, 256, kernel_size=(3, 300), stride=(1, 1))\n",
+       "    (1): Conv2d(1, 256, kernel_size=(4, 300), stride=(1, 1))\n",
+       "    (2): Conv2d(1, 256, kernel_size=(5, 300), stride=(1, 1))\n",
+       "  )\n",
+       "  (dropout): Dropout(p=0.5, inplace=False)\n",
+       "  (fc): Linear(in_features=768, out_features=4, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.load_state_dict(torch.load(\"./data/pretraining/save/1_intent_clsf_model/intent_clsf_97.217_steps_33.pt\"))\n",
+    "model.load_state_dict(torch.load(\"./data/pretraining/1_intent_clsf_model/intent_clsf_99.463_steps_9.pt\"))\n",
     "\n",
     "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "발화 : 제주도 오늘 날씨 알려줘\n",
+      "의도 : weather\n",
+      "Wall time: 68.8 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "q = \"제주도 오늘 날씨 알려줘\"\n",
@@ -442,6 +632,13 @@
     "print(\"발화 : \" + q)\n",
     "print(\"의도 : \" + intent)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
